--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.6.1",
+    "react-waypoint": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
